trunk/PhysMach/3rdparty/comedi/comedilib.pas


    function comedi_poll(var dev:comedi_t; subdevice:dword):longint;cdecl;external External_library name 'comedi_poll';

    { buffer control  }
    function comedi_set_max_buffer_size(var it:comedi_t; subdev:dword; max_size:dword):longint;cdecl;external External_library name 'comedi_set_max_buffer_size';

    function comedi_get_buffer_contents(var it:comedi_t; subdev:dword):longint;cdecl;external External_library name 'comedi_get_buffer_contents';

    function comedi_mark_buffer_read(var it:comedi_t; subdev:dword; bytes:dword):longint;cdecl;external External_library name 'comedi_mark_buffer_read';

    function comedi_mark_buffer_written(var it:comedi_t; subdev:dword; bytes:dword):longint;cdecl;external External_library name 'comedi_mark_buffer_written';

    function comedi_get_buffer_offset(var it:comedi_t; subdev:dword):longint;cdecl;external External_library name 'comedi_get_buffer_offset';

{$ifdef _COMEDILIB_DEPRECATED}
    {
     * The following functions are deprecated and should not be used.
      }
    function comedi_get_timer(var it:comedi_t; subdev:dword; freq:double; var trigvar:dword; var actual_freq:double):longint;cdecl;external External_library name 'comedi_get_timer';

    function comedi_timed_1chan(var it:comedi_t; subdev:dword; chan:dword; range:dword; aref:dword; 
               freq:double; n_samples:dword; var data:double):longint;cdecl;external External_library name 'comedi_timed_1chan';

    function comedi_get_rangetype(var it:comedi_t; subdevice:dword; chan:dword):longint;cdecl;external External_library name 'comedi_get_rangetype';

{$endif}
{$ifndef _COMEDILIB_STRICT_ABI}
    {
       The following prototypes are _NOT_ part of the Comedilib ABI, and
       may change in future versions without regard to source or binary
       compatibility.  In practice, this is a holding place for the next
       library ABI version change.
      }
    { structs and functions used for parsing calibration files  }

    type

       Pcomedi_caldac_t = ^comedi_caldac_t;
       comedi_caldac_t = record
            subdevice : dword;
            channel : dword;
            value : dword;
         end;

    const
       COMEDI_MAX_NUM_POLYNOMIAL_COEFFICIENTS = 4;       

    type

       Pcomedi_polynomial_t = ^comedi_polynomial_t;
       comedi_polynomial_t = record
            coefficients : array[0..(COMEDI_MAX_NUM_POLYNOMIAL_COEFFICIENTS)-1] of double;
            expansion_origin : double;
            order : dword;
         end;

       Pcomedi_softcal_t = ^comedi_softcal_t;
       comedi_softcal_t = record
            to_phys : Pcomedi_polynomial_t;
            from_phys : Pcomedi_polynomial_t;
         end;

    const
       CS_MAX_AREFS_LENGTH = 4;       

    type

       Pcomedi_calibration_setting_t = ^comedi_calibration_setting_t;
       comedi_calibration_setting_t = record
            subdevice : dword;
            channels : Pdword;
            num_channels : dword;
            ranges : Pdword;
            num_ranges : dword;
            arefs : array[0..(CS_MAX_AREFS_LENGTH)-1] of dword;
            num_arefs : dword;
            caldacs : Pcomedi_caldac_t;
            num_caldacs : dword;
            soft_calibration : comedi_softcal_t;
         end;

       Pcomedi_calibration_t = ^comedi_calibration_t;
       comedi_calibration_t = record
            driver_name : Pchar;
            board_name : Pchar;
            settings : Pcomedi_calibration_setting_t;
            num_settings : dword;
         end;
(* Const before type ignored *)

    function comedi_parse_calibration_file(cal_file_path:Pchar):Pcomedi_calibration_t;cdecl;external External_library name 'comedi_parse_calibration_file';

(* Const before type ignored *)
    function comedi_apply_parsed_calibration(var dev:comedi_t; subdev:dword; channel:dword; range:dword; aref:dword; 
               var calibration:comedi_calibration_t):longint;cdecl;external External_library name 'comedi_apply_parsed_calibration';

    function comedi_get_default_calibration_path(var dev:comedi_t):Pchar;cdecl;external External_library name 'comedi_get_default_calibration_path';

    procedure comedi_cleanup_calibration(var calibration:comedi_calibration_t);cdecl;external External_library name 'comedi_cleanup_calibration';

(* Const before type ignored *)
    function comedi_apply_calibration(var dev:comedi_t; subdev:dword; channel:dword; range:dword; aref:dword; 
               cal_file_path:Pchar):longint;cdecl;external External_library name 'comedi_apply_calibration';

    { New stuff to provide conversion between integers and physical values that
    * can support software calibrations.  }

    type
       comedi_conversion_direction =  Longint;
       Const
         COMEDI_TO_PHYSICAL = 0;
         COMEDI_FROM_PHYSICAL = 1;

(* Const before type ignored *)

    function comedi_get_softcal_converter(subdevice:dword; channel:dword; range:dword; direction:comedi_conversion_direction; var calibration:comedi_calibration_t; 
               var polynomial:comedi_polynomial_t):longint;cdecl;external External_library name 'comedi_get_softcal_converter';

    function comedi_get_hardcal_converter(var dev:comedi_t; subdevice:dword; channel:dword; range:dword; direction:comedi_conversion_direction; 
               var polynomial:comedi_polynomial_t):longint;cdecl;external External_library name 'comedi_get_hardcal_converter';

(* Const before type ignored *)
    function comedi_to_physical(data:lsampl_t; var conversion_polynomial:comedi_polynomial_t):double;cdecl;external External_library name 'comedi_to_physical';

(* Const before type ignored *)
    function comedi_from_physical(data:double; var conversion_polynomial:comedi_polynomial_t):lsampl_t;cdecl;external External_library name 'comedi_from_physical';

{$endif}
{ C++ end of extern C conditionnal removed }
{$endif}

implementation

    { was #define dname(params) para_def_expr }
    { argument types are unknown }
    { return type might be wrong }   
    function COMEDI_VERSION_CODE(a,b,c : longint) : longint;
      begin
         COMEDI_VERSION_CODE:=((a shl 16) or (b shl 8)) or c;
      end;


end.
